[tool.poetry]
name = "eat-pytorch"
version = "0.1.0"
description = ""
authors = ["Zhichao Zhang <glzhangzhi@126.com>"]
readme = "README.md"
packages = [{include = "eat_pytorch"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
